--- a/messaging-app/pom.xml
+++ b/messaging-app/pom.xml
@@ -45,6 +45,12 @@
       <version>${pact.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>au.com.dius</groupId>
+      <artifactId>pact-jvm-consumer-junit_2.12</artifactId>
+      <version>${pact.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
